[package]
name = "precip"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies]
failure = "0.1.1"
serde = "1.0.55"
serde_json = "1.0.17"
serde_derive = "1.0.55"
diesel = { version = "1.2.2", features = ["chrono", "postgres", "uuid"] }
dotenv = "0.13.0"
uuid = { version = "0.6.3", features = ["serde"] }
rand = "0.4.2"
chrono = { version = "0.4.2", features = ["serde"] }
rusoto_s3 = "0.32.0"
rusoto_core = "0.32.0"
tokio = "0.1.6"
futures-await = "0.1.1"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"
ads1x15 = "0.2.0"
i2cdev = "0.4.0"
toml = "0.4.6"
sysfs_gpio = "0.5.3"
slog = "2.2.3"
slog-journald = "2.0.0"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
slog-scope = "4.0.1"
slog-async = "2.3.0"

[profile.release]
lto = true
