[package]
name = "precip"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies]
ads1x15 = "0.5.0"
chrono = { version = "0.4.5", features = ["serde"] }
config = "0.9.0"
failure = "0.1.2"
futures-await = "0.1.1"
i2cdev = "0.4.0"
i2cdev-bmp280 = "0.1.4"
i2csensors = "0.1.3"
influent = { git = "https://github.com/dflemstr/influent.rs.git", branch = "send-sync" }
itertools = "0.7.8"
rand = "0.5.5"
rusoto_core = "0.33.1"
rusoto_s3 = "0.33.1"
serde = "1.0.71"
serde_derive = "1.0.71"
serde_json = "1.0.26"
slog = "2.3.2"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-journald = "2.0.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
structopt = "0.2.10"
sysfs_gpio = "0.5.3"
tokio = "0.1.7"
uuid = { version = "0.6.5", features = ["serde"] }

[patch.crates-io]
i2csensors = { git = "https://github.com/dflemstr/i2cdev-sensors.git", branch = "upgrade-i2cdev" }
i2cdev-bmp280 = { git = "https://github.com/dflemstr/i2cdev-sensors.git", branch = "upgrade-i2cdev" }

[profile.release]
debug = true
