[package]
name = "precip"
version = "0.1.0"
authors = ["David Flemström <david.flemstrom@gmail.com>"]

[dependencies]
ads1x15 = "0.5.0"
chrono = { version = "0.4.6", features = ["serde"] }
config = "0.9.1"
failure = "0.1.2"
futures-await = "0.1.1"
i2cdev = "0.4.0"
i2cdev-bmp280 = "0.1.4"
i2csensors = "0.1.3"
influent = { git = "https://github.com/dflemstr/influent.rs.git", branch = "send-sync" }
itertools = "0.7.8"
rand = "0.5.5"
rusoto_core = "0.34.0"
rusoto_s3 = "0.34.0"
serde = "1.0.79"
serde_derive = "1.0.79"
serde_json = "1.0.32"
slog = "2.4.1"
slog-async = "2.3.0"
slog-envlogger = "2.1.0"
slog-journald = "2.0.0"
slog-scope = "4.0.1"
slog-stdlog = "3.0.2"
slog-term = "2.4.0"
structopt = "0.2.11"
sysfs_gpio = "0.5.3"
tokio = "0.1.11"
uuid = { version = "0.7.1", features = ["serde"] }
cron = "0.6.0"

[patch.crates-io]
i2csensors = { git = "https://github.com/dflemstr/i2cdev-sensors.git", branch = "upgrade-i2cdev" }
i2cdev-bmp280 = { git = "https://github.com/dflemstr/i2cdev-sensors.git", branch = "upgrade-i2cdev" }

[profile.release]
debug = true
